fix: opanapi yaml
